--- a/spring Security/spring-Security/src/main/resources/application.properties
+++ b/spring Security/spring-Security/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.show-sql=true
 
 
 #when add spring security
-spring.security.user.name=dinesh
-spring.security.user.password=1234
+#spring.security.user.name=dinesh
+#spring.security.user.password=1234
 
 spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
 
